fixed spacing issue on login + home (with .app)

--- a/frontend/src/components/Auth/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/Auth/SignupFormModal/SignupForm.css
@@ -42,14 +42,14 @@
     margin: 5px;
     padding: 7px;
     width: 100%;
-    background-color: rgb(255, 235, 154);
+    background-color: rgb(245, 214, 91);
     color: rgb(102, 70, 10);
     font-size: 14px;
 }
 
 #signup-button:hover {
     cursor: pointer;
-    background-color: rgb(245, 223, 133);
+    background-color: rgb(228, 192, 48);
 }
 
 .signup-labels {
